--- a/src/output.css
+++ b/src/output.css
@@ -5548,6 +5548,11 @@ a.\!chip:hover,
   color: rgb(255 255 255 / 0.5);
 }
 
+.text-slate-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
 .accent-surface-900 {
   accent-color: rgb(var(--color-surface-900) / 1);
 }
@@ -7588,6 +7593,13 @@ body {
 .dark\:hover\:brightness-110:hover:is(.dark *) {
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+@media (min-width: 640px) {
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 768px) {
